# bserde

./: .gitignore  Cargo.toml  README.md
bserde/: Cargo.toml  README.md
bserde/examples/: bserde.rs
bserde/src/: lib.rs
bserde/src/deserializer/: mod.rs  types.rs
bserde/src/serializer/: mod.rs  types.rs
bserde_derive/: Cargo.toml  README.md
bserde_derive/examples/: bserde.rs  config.rs  enum.rs  unamed.rs
bserde_derive/src/: lib.rs
