[package]
name = "bserde_derive"
description = "Derive Macros for bserde"
version = "0.1.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/RealViper8/bserde/bserde_derive"
repository = "https://github.com/RealViper8/bserde"
authors = ["Gabriel"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
syn = {version="2.0.117", features = ["extra-traits"] }
bserde = {path = "../bserde", version = ">=0.1.2"}

[[example]]
name="config"
